// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionStatus status \`late\` renders properly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#FC5E13",
        },
      ],
    ]
  }
>
  Late
</Text>
`;

exports[`SubmissionStatus status \`missing\` renders properly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#EE0612",
        },
      ],
    ]
  }
>
  Missing
</Text>
`;

exports[`SubmissionStatus status \`none\` renders properly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#8B969E",
        },
      ],
    ]
  }
>
  Not Submitted
</Text>
`;

exports[`SubmissionStatus status \`submitted\` renders properly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Array [
        Object {
          "fontSize": 14,
          "paddingTop": 2,
        },
        undefined,
        Object {
          "color": "#00AC18",
        },
      ],
    ]
  }
>
  Submitted
</Text>
`;
